<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright 2016 dest16
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_yande"
            android:checked="true"
            android:icon="@mipmap/ic_yande"
            android:title="@string/yande_menu_title"/>
        <item
            android:id="@+id/nav_konachan"
            android:icon="@mipmap/ic_konachan"
            android:title="@string/konachan_menu_title"/>
        <item
            android:id="@+id/nav_donmai"
            android:icon="@mipmap/ic_donmai"
            android:title="@string/donmai_menu_title"/>
        <item
            android:id="@+id/nav_safebooru"
            android:icon="@mipmap/ic_safebooru"
            android:title="@string/safebooru_menu_title" />
        <!--<item-->
        <!--android:id="@+id/nav_gelbooru"-->
        <!--android:title="@string/gelbooru_menu_title"/>-->
        <item
            android:id="@+id/nav_shuushuu"
            android:icon="@mipmap/ic_shushu"
            android:title="@string/shuushuu_menu_title"/>
        <!--<item-->
            <!--android:id="@+id/nav_zerochan"-->
            <!--android:icon="@mipmap/ic_zerochan"-->
            <!--android:title="@string/zerochan_menu_title"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_monitokyo"-->
            <!--android:icon="@mipmap/ic_minitokyo"-->
            <!--android:title="@string/minitokyo_menu_title"/>-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
